--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,33 @@
 /* body{
     color: darkgreen;
 } */
+*{
+    color: rgb(0, 0, 0);
+}
 h1{
     color: darkmagenta;
 }
 .estiloParrafo{
-    background-color: darkorange;
+    background-color: rgb(179, 212, 207);
     opacity: 50%;
 }
+#primerTitulo{
+    background-color: aquamarine;
+    color: white;
+}
+
+/* con . es selector de class y con # es selector id */
+
+.cajas{
+    background-color: green;
+    width: 100px;
+    height: 100px;
+    border: blue;
+    border-style: groove;
+    margin: 50px;
+    padding-left: 200px;
+}
+#caja1{
+    opacity: 50%;
+}
+
